# gli

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_SUBMISSION.md  FORMAT.md  LICENSE  Makefile  README.md  codecheck.sh  example.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: dataset.doctree  gli.doctree  graph.doctree  io.doctree  task.doctree  utils.doctree
.github/: PULL_REQUEST_TEMPLATE.md  document_QA_script.py  requirements.txt
.lh/: requirements.txt.json
api/: dataset.html  gli.html  graph.html  io.html  task.html  utils.html
docs/: .readthedocs.yaml  requirements.txt
format/: citation.html  file.html
glb/: __init__.py  attribute.py  config.py  dataloader.py  dataloading.py  dataset.py  graph.py  tags.py  task.py  utils.py
gli/: __init__.py  config.py  dataloading.py  dataset.py  graph.py  io.py  markdown_file_cora.txt  raw_text_utils.py  tags.py  task.py  utils.py
start/: contribute.html  install.html  tutorial.html
tests/: KG_utils.py  config.yaml  kg_utils.py  preprocess.py  test_data_loading.py  test_examples_data.py  test_examples_json.py  test_files.py  test_io.py  test_kg_training.py  test_metadata.py  test_node_classification_training.py  test_node_regression_training.py  test_node_training.py  test_relation_predict.py  test_task.py  test_train_KG.py  test_training.py  test_training_utils.py  training_utils.py  utils.py
(+632 files in other folders)
