[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gl-indexer"
version = "0.1.0"
authors = [
    { name = "Jiaqi Ma", email = "jiaqima@umich.edu" },
    { name = "Xingjian Zhang", email = "jimmyzxj@umich.edu" },
]
description = "Contributor-friendly and metadata-rich platform for graph learning benchmarks."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.19", "scipy>=1.5", "torch>=1.10", "dgl>=0.6"]
optional-dependencies = { test = [
    "pytest",
    "pydocstyle",
    "pycodestyle",
    "pylint",
    "pyyaml",
    "pre-commit",
], doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx_copybutton"
], tag = [
    "powerlaw",
] }

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"

[tool.setuptools.packages.find]
where = ["."]
